# flash_dock

./: .gitattributes  .gitignore  FlashDock.py  INSTALLATION.md  README.md  architecture.md  env.sh  env.yml  justfile  main.py  pyproject.toml  requirements.txt
Batch_Docking/: ligand2.sdf
Batch_Docking_Result/: receptor1_ligand1_docked.sdf  receptor2_ligand1_docked.sdf  receptor2_ligand3_docked.sdf  receptor2_ligand4_docked.sdf  receptor3_ligand2_docked.sdf  receptor4_ligand2_docked.sdf
batch_docking/input/: ligand1.sdf  ligand3.sdf  ligand4.sdf
batch_docking/output/: receptor1_ligand2_docked.sdf  receptor1_ligand3_docked.sdf  receptor1_ligand4_docked.sdf  receptor2_ligand2_docked.sdf  receptor3_ligand3_docked.sdf  receptor3_ligand4_docked.sdf  receptor4_ligand1_docked.sdf  receptor4_ligand3_docked.sdf  receptor4_ligand4_docked.sdf
examples/batch_dock_result/: receptor3_ligand1_docked.sdf
examples0/ligand/: ligand.sdf
flash_dock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
legacy/: FlashDock_web.py  FlashDock_web_v1.py
model/PLANET/: PLANET_datautils.py  PLANET_run.py  PLANET_train.py  chemutils.py  pred.py
models/PLANET/: PLANET_datautils.py  PLANET_model.py  PLANET_run.py  PLANET_test.py  PLANET_train.py  chemutils.py  layers.py  nnutils.py  pred.py
others/: logo.txt
others/PLANET/: PLANET_model.py  PLANET_test.py  layers.py  nnutils.py  pred.py
others/Uni-Mol/unimol_plus/: train_pcq.sh
result/Docking_Result/: ZINC000000000053_7DSK(1)_docked.sdf  ligand_predict.lmdb
utils/p2rank_2.5.1/: LICENSE.txt  README.md
(+8 files in other folders)
